[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "framework_user"
version = "0.0.1"
authors = [
  { name="Aurimas Kudarauskas"},
]

dependencies = [

]

description = "A package that show how to use test framework"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
