[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Needed for usign repos directly
[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "framework_user"
version = "0.0.1"
authors = [
  { name="Aurimas Kudarauskas"},
]

dependencies = [
  "test_framework_base[vendor_a]@git+https://github.com/aurimas-kudarauskas/TestFrameworkBase"
  # "test_framework_base[vendor_b]@git+https://github.com/aurimas-kudarauskas/TestFrameworkBase"
]

description = "A package that show how to use test framework"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
framework_user= "framework_user.bin.framework_user_cli:main"
